fix alignment in services section. add box-shadow to cards.

--- a/styles.css
+++ b/styles.css
@@ -178,15 +178,16 @@ section {
 
 .about-section {
   width: 100%;
+  padding: 2em 5.625em;
   background-color: #fff;
-  border: 1px solid #fff;
+  /* border: 1px solid #fff; */
 }
 
 
 .grid {
   display: flex;
   justify-content: space-between;
-  margin: 5.625em;
+  /* margin: 3em; */
   /* border: 1px solid red; */
 }
 
@@ -195,7 +196,7 @@ section {
   flex-direction: column;
   align-items: flex-start;
   justify-content: center;
-  /* border: 1px solid red; */
+  border: 1px solid red;
   /* padding: 10px; */
   /* margin: 10px; */
 }
@@ -227,15 +228,21 @@ section {
 }
 
 .services-section {
-  padding: 0 5em;
+  padding: 2em 5.625em;
   width: 100%;
+  /* height: 50vh; */
   background: linear-gradient(#fff, #ddd);
   border: 1px solid #fff;
 }
 
-.button:hover {
-  background-color: #005FC9;
+.grid-services {
+  display: flex;
+  justify-content: space-evenly;
 }
+
+/* .button:hover {
+  background-color: #005FC9;
+} */
 
 .contact-section {
   width: 100%;
@@ -251,10 +258,41 @@ section {
   /* padding: 10px; */
 }
 
+.flex {
+  display: flex;
+  justify-content: space-evenly;
+  /* align-items: center; */
+  /* height: 100%; */
+  margin: 3em 0 7em 0;
+}
+
 .card {
-  text-align: left;
-  padding: 10px;
-  background-color: #fff;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 1.5em;
+  /* border: 1px solid red; */
+  max-width: 350px;
+  border-radius: 10px;
+  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, 
+              rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
+}
+
+.img-div {
+  /* width: 100%; */
+  width: 300px;
+  height: 200px;
+  background-color: lightgray;
+}
+
+.desc {
+  display: flex;
+  flex-direction: column;
+}
+
+.desc a, span {
+  color: var(--brand-color);
 }
 
 .card > img {
